[package]
name = "rdevid"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
sha2 = "0.10.8"
hex = "0.4"
sysinfo = "0.34.1"

web-sys = { version = "0.3.77", features = [
    "Navigator",
    "Screen",
    "Window",
    "PluginArray",
], optional = true }
js-sys = { version = "0.3.77", optional = true }

[features]
wasm = ["web-sys", "js-sys"]
